--- a/getto100/src/index.css
+++ b/getto100/src/index.css
@@ -1,8 +1,8 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;*/
   line-height: 1.5;
   font-weight: 400;
-
+  margin: 0;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -26,18 +27,20 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px;
+  min-height: 100vh;*/
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: auto;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  /*border-radius: 8px;*/
+  width: 40%;
+  border: 1px solid rgb(0 166 237);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -46,27 +49,36 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
+
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
 
-.h{
-  display: none;
-}
 
+
+/*
+.openBtn {
+  background-color: gold;
+  width: 100vw;
+}
+*/
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
