--- a/getto100/src/index.css
+++ b/getto100/src/index.css
@@ -25,18 +25,16 @@ a:hover {
 }
 
 body {
-  
+  font-family: sans-serif;
   margin: 0;
   display: flex;
   place-items: center;
-  /* min-width: 320px;
-  min-height: 100vh;*/
+  justify-content: center;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  margin: auto;
 }
 
 button {
