--- a/getto100/src/Components/Game/Game.css
+++ b/getto100/src/Components/Game/Game.css
@@ -1,26 +1,29 @@
 .openBtns {
-  /* background-color: rgb(0 166 237);
-    width: 100vw; */
+  background-color: aliceblue;
+    border: 1px #0078d7 solid;
+  width: 100vw;
 }
 
 .openBtn {
   margin: 5px;
-  border-color: #0078d7;
+  border-color: #97cdf9;
   border-radius: 10px;
+
   color: black;
-  box-shadow: 0 0 40px 40px #0078d7 inset, 0 0 0 0 #0078d7;
+  box-shadow: 0 0 40px 40px #abd3f1 inset, 0 0 0 0 #97cdf9;
+  box-shadow: 0 0 40px 40px #b4d7f3 inset, 0 0 0 0 #97cdf9;
   transition: all 150ms ease-in-out;
   width: 120px;
 
   &:hover {
-    box-shadow: 0 0 10px 0 #0078d7 inset, 0 0 10px 4px #0078d7;
+    box-shadow: 0 0 10px 0 #97cdf9 inset, 0 0 10px 4px #97cdf9;
   }
 }
 
 .gameBoard {
   width: 300px;
   margin: 10px;
-  border: #0078d7 solid 1px;
+  border: #97cdf9 solid 1px;
   border-radius: 15px;
 }
 
@@ -32,13 +35,19 @@
   justify-content: space-evenly;
 }
 
-.topPlayers{
-  background-color: #0078d7;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 50px;
-  margin-left: -110px;
+.TopPlayers {
+  border: solid 1px #0078d7;
+    background-color: white;
+  margin: 0px;
+}
+
+.logo {
+  width: 200px;
+  height: 200px;
+  padding: 0;
+}
+.logoDiv {
   margin-top: 10px;
+  width: 100%;
+  background-color: #97cdf9;
 }
